<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/colorWhite">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorMain">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:cropToPadding="true"
            android:src="@drawable/signup_backbtn"
            android:tint="@color/colorWhite"
            android:tintMode="src_atop"
            android:padding="0dp"
            android:background="@color/transparent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/me_menu_password"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/round_fill_layout"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:textColor="@color/colorMain"
                android:textSize="16sp"
                android:text="@string/me_password_pwd"/>

            <EditText
                android:id="@+id/oldPassEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:hint="@string/me_password_pwd_hint"
                android:inputType="textPassword"
                android:textColor="@color/colorMain"
                android:textColorHint="@color/colorGrayText"
                android:textSize="14dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="100dp"
            android:background="@color/colorMain"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:textColor="@color/colorMain"
                android:textSize="16sp"
                android:text="@string/me_password_new_pwd"/>

            <EditText
                android:id="@+id/newPassEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:hint="@string/me_password_new_pwd_hint"
                android:inputType="textPassword"
                android:textColor="@color/colorMain"
                android:textColorHint="@color/colorGrayText"
                android:textSize="14dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="100dp"
            android:background="@color/colorMain"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:textColor="@color/colorMain"
                android:textSize="16sp"
                android:text="@string/me_password_new_pwd"/>

            <EditText
                android:id="@+id/confirmPassEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:fontFamily="sans-serif"
                android:hint="@string/me_password_confirm_pwd_hint"
                android:inputType="textPassword"
                android:textColor="@color/colorMain"
                android:textColorHint="@color/colorGrayText"
                android:textSize="14dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="100dp"
            android:background="@color/colorMain"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:textColor="@color/colorMain"
                android:textSize="16sp"
                android:text="@string/me_password_vfcode"/>

            <EditText
                android:id="@+id/smsEdit"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:hint="@string/me_password_vfcode_hint"
                android:inputType="number"
                android:maxLength="6"
                android:textColor="@color/colorMain"
                android:textColorHint="@color/colorGrayText"
                android:textSize="14dp"/>

            <Button
                android:id="@+id/smsBtn"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textAllCaps="false"
                android:text="@string/me_password_vfcode_request"
                android:background="@drawable/vfcode_button"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginLeft="100dp"
			android:background="@color/colorMain"/>

    </LinearLayout>

    <Button
        android:id="@+id/passwordBtn"
        android:text="@string/me_password_modify"
        android:background="@drawable/round_fill_button"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:layout_width="280dp"
        android:textSize="20sp"
        android:layout_height="40dp" />

</LinearLayout>
