<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_centerInParent="true"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="#FFFFFF">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

        <TextView
                android:id="@+id/titleText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:ellipsize="end"
                android:paddingStart="20dp"
                android:visibility="visible"
                android:text="Alert"/>

    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

        <TextView
                android:id="@+id/descText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@android:color/black"
                android:gravity="start|top"
                android:visibility="visible"
                android:text="@string/server_qrcode_name"/>

        <EditText
                android:id="@+id/contentEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_border"
                android:ems="20"
                android:hint="@string/server_qrcode_hint"
                android:textColor="@color/colorMain"
                android:textColorHint="@color/colorGrayText"
                android:textSize="16sp"/>

    </LinearLayout>


    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentEnd="true">


            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_button_general_height"
                    android:background="@android:color/transparent"
                    android:textColor="@android:color/black"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:layout_marginEnd="6dp"
                    android:text="@string/cancel"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:id="@+id/btn_other"/>

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_button_general_height"
                    android:background="@android:color/transparent"
                    android:textColor="@android:color/black"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:text="@string/ok"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginEnd="10dp"
                    android:id="@+id/btn_default"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
